k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: customer
  name: customer
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: customer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: customer
    spec:
      containers:
      - image: abassadey/customer-service:1.0.0
        name: customer-service
        env:
          - name: MANAGEMENT_SERVER_PORT
            value: "9001"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 9001
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 9001
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
