k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-03-23T17:44:51Z"
  labels:
    app: customer
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2021-03-23T17:44:51Z"
  name: customer
  namespace: default
  resourceVersion: "3771"
  uid: 1899c1b9-de70-4556-a1ab-b81ae8c23ef4
spec:
  clusterIP: 10.104.223.140
  clusterIPs:
  - 10.104.223.140
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
